[package]
name = "chaline-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
# futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = "0.28.0"
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-fmt = "0.1.1"
